@@ -1,3 +1,8 @@
+Wed Nov 30 23:52:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (NEWHEAP, ADD2HEAP): set count after pointer was set.
+	  fixed: [ruby-dev:27896]
+
 Thu Oct 13 23:25:10 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (HEAPCNT): bison allocates indivisible size.
